--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://192.168.1.85:3306/UserInfoDB?serverTimezone=CST6CDT
 spring.datasource.username=codecolonist
 spring.datasource.password=developer2019
-server.port=9091
 spring.application.name=loginservice
 spring.cloud.refresh.enabled=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://192.168.1.88:8761/eureka
